[gd_scene load_steps=2 format=3 uid="uid://dgb1baek16vxd"]

[ext_resource type="Script" path="res://Scripts/UI/PlayButton/PlayButton.gd" id="1_l7wxa"]

[node name="LoadingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_l7wxa")

[node name="PlayButtonPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="PlayButtonPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.0
offset_top = -27.5
offset_right = 76.0
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
text = "Play"

[node name="LoadingScreenPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ProgressBar" type="ProgressBar" parent="LoadingScreenPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = 2.0
offset_right = 84.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProgressBarLabel" type="Label" parent="LoadingScreenPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.5
offset_top = -29.5
offset_right = 86.5
offset_bottom = -6.5
grow_horizontal = 2
grow_vertical = 2
text = "Loading..."
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="PlayButtonPanel/Button" to="." method="_on_button_pressed"]
